Fix page height on mobile

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,6 +1,6 @@
 #root {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   min-height: 100%;
   position: absolute;
 
